<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aaaliua</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    
        <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="description_search">搜索</string>
    
      <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="refreshing">Refreshing</string>
    
    
    <string name="onehint">Passion\ntowards\nYour Life\n_________</string>
    <string name="birtydya_hint">You are the most precious birthday as the first schedule</string>
    <string name="sigin_birtyday">Register Birthday</string>
    <string name="in">Immediate use</string>
    <string name="two_hint">The connection you are using a Calendar</string>
    <string name="two_hint_child">By connecting to the calendar in other machine confirm to safer keeping your schedule. Please select your calendar in the following</string>
    
     <integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>
    
     
     
       <string name="icon_user">&#xf007;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_readmore">&#xf178;</string>
    <string name="icon_answer">&#xf095;</string>
    <string name="icon_mute">&#xf131;</string>

    <string name="icon_like">&#xf087;</string>
    <string name="icon_share">&#xf064;</string>
    <string name="icon_follow">&#xf005;</string>

    <string name="icon_android">&#xf17b;</string>
    <string name="icon_dropbox">&#xf16b;</string>
    <string name="icon_soundcloud">&#xf1be;</string>
    <string name="icon_spotify">&#xf1bc;</string>

    <string name="icon_vine">&#xf1ca;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_tumbler">&#xf173;</string>
    <string name="icon_stackoverflow">&#xf16c;</string>
    <string name="icon_gplus">&#xf0d5;</string>
    <string name="icon_facebook">&#xf09a;</string>

    <string name="icon_entypo_facebook">&#59140;</string>

    <string name="icon_behance">&#xf1b4;</string>
    <string name="icon_dribble">&#xf17d;</string>

    <string name="icon_send">&#xf1d8;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_config">&#xf085;</string>
     
    
    
     <string name="about_cody"><![CDATA[
        Demo app for <a href="https://github.com/jpardogo/ListBuddies><i>ListBuddies</i></a>.
        Android library to achieve in an easy way, the behaviour of the home page
        in the <a href="https://play.google.com/store/apps/details?id=com.expedia.bookings">
        <i>Expedia app</i></a>, with a pair of auto-scroll circular parallax ListViews.<br><br>

        version%1$s<br>
        Copyright 2013&ndash;2014 Javier Pardo de Santayana Gómez<br>
        All Rights Reserved.<br>
        <a href="https://github.com/jpardogo/ListBuddies/blob/master/LICENSE">Terms of Service</a>,<br><br>

        Many thanks to these open source projects:<br><br>

        <b><a href="http://square.github.io/okhttp/">OkHttp</a> and <a href="http://square.github.io/picasso/">Picasso</a>&nbsp;</b><br>
        <i>by Square</i><br><br>

        <b><a href="http://jakewharton.github.io/butterknife/">ButterKnife</a>&nbsp;</b><br>
        <i>by Jake Wharton</i><br><br>
    ]]></string>
     
     
     
     
         <string name="title_section1">Alicante</string>
    <string name="title_section2">Barcelona</string>


    <string name="alicante_texto_1">"Alicante (Spanish: [ali'kante]), or Alacant (Valencian: [ala'kant]), both official names, is a city and port in Spain on the Costa Blanca, the capital of the province of Alicante and of the comarca of Alacantí, in the south of the Valencian Community. It is also a historic Mediterranean port. The population of the city of Alicante proper was 334,329, estimated as of 2011, ranking as the second-largest Valencian city.[1] Including nearby municipalities, the Alicante conurbation had 462,281 residents.[2] The population of the metropolitan area (including Elche and satellite towns) was 771,061 as of 2011 estimates, ranking as the eighth-largest metropolitan area of Spain.[3]"</string>
    <string name="alicante_texto_2">"Amongst the most notable features of the city are the Castle of Santa Bárbara, which sits high above the city, and the port of Alicante. The latter was the subject of bitter controversy in 2006–2007 as residents battled, successfully, to keep it from being changed into an industrial estate."</string>
    <string name="alicante_texto_3">"The Santa Bárbara castle is situated on Mount Benacantil, overlooking the city. The tower (La Torreta) at the top, is the oldest part of the castle, while part of the lowest zone and the walls were constructed later in the 18th century."</string>
    <string name="alicante_texto_4">"The promenade Explanada de España, lined by palm trees, is paved with 6.5 million marble floor tiles creating a wavy form and is one of the most lovely promenades in Spain. The Promenade extends from the Port of Alicante to the Gran Vía and ends at the famous statue of Mark Hersch. For the people of Alicante, the promenade is the meeting place for the traditional Spanish paseo, or stroll along the waterfront in the evenings, and a venue for outdoor musical concerts. At the end of the promenade is a monument by the artist Bañuls of the 19th century."</string>
    <string name="alicante_text_0">"Alicante"</string>
    <string name="barcelona_text_0">"Barcelona"</string>
    <string name="alicante_explanada">"Explanada"</string>
    <string name="barcelona_texto_1">"Barcelona (English /bɑrsə'loʊnə/, Catalan: [bərsə'ɫonə], Spanish: [barθe'lona]) is the capital city of the autonomous community of Catalonia in Spain and the country's 2nd largest city, with a population of 1.6 million[1] within its administrative limits. Its urban area extends beyond the administrative city limits with a population of around 4.5 million people, being the sixth-most populous urban area in the European Union after Paris, London, Madrid, the Ruhr area and Milan. About five million[2][3][4][5][6] people live in the Barcelona metropolitan area."</string>
    <string name="barcelona_texto_2">"Of Barcelona's parks, Montjuïc is the largest, with 203 ha located on the mountain of the same name.[42] It is followed by Parc de la Ciutadella (which occupies the site of the old military citadel and which houses the Parliament building, the Barcelona Zoo and several museums); 31 ha or 76.6 acres including the zoo), the Guinardó Park (19 ha or 47.0 acres), Park Güell (designed by Antoni Gaudí; 17.2 ha or 42.5 acres), Oreneta Castle Park (also 17.2 ha or 42.5 acres), Diagonal Mar Park (13.3 ha or 32.9 acres, inaugurated in 2002), Nou Barris Central Park (13.2 ha or 32.6 acres), Can Dragó Sports Park and Poblenou Park (both 11.9 ha or 29.4 acres), the Labyrinth Park (9.10 ha or 22.5 acres), named after the garden maze it contains.[42]"</string>
    <string name="barcelona_texto_3">"Barcelona has a great number of museums, which cover different areas and eras. The National Museum of Art of Catalonia possesses a well-known collection of Romanesque art while the Barcelona Museum of Contemporary Art focuses on post-1945 Catalan and Spanish art. The Fundació Joan Miró, Picasso Museum and Fundació Antoni Tàpies hold important collections of these world-renowned artists."</string>
    <string name="barcelona_texto_4">"At the very top of the monument stands a 7.2 m (24 ft) tall bronze statue atop a 40 m (131 ft) tall Corinthian column. The statue was sculpted by Rafael Atché and is said to depict Columbus pointing towards the New World with his right hand, while holding a scroll in the left. It is a commonly held belief that instead of pointing to the west towards the New World, the statue points east towards Columbus's supposed home city of Genoa."</string>
    <string name="barcelona_guell">Parc Güell</string>
    <string name="about_text_2"><![CDATA[This is a demo app of a library.<br/>Developed by:<br/><a href=\'http://www.fmsirvent.com\'>fmSirvent</a><br/>You can see more info at:<br/><a href=\'https://github.com/Narfss/ParallaxEverywhere\'>https://github.com/Narfss/ParallaxEverywhere</a>]]></string>
     
</resources>
