<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guide_bg_birthday" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/birthdayIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/guide_img_birthday" />

        <com.saulmm.material.slidingtabs.views.WPTextView
            android:id="@+id/birthdayHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birthdayIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/birtydya_hint"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:fontVariation="light" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birthdayHint"
            android:layout_centerHorizontal="true"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/guide_img_birthday_signup"
            android:text="@string/sigin_birtyday"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="8dip"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <com.saulmm.material.slidingtabs.views.WPTextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28dip"
                        android:gravity="center"
                        android:text="2/2"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:fontVariation="light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <com.saulmm.material.slidingtabs.views.WPTextView
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28dip"
                        android:drawableRight="@drawable/guide_ico_sync_skip"
                        android:gravity="right"
                        android:text="@string/in"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:fontVariation="light" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>