<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.saulmm.material.slidingtabs.views.WPTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/two_hint"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:fontVariation="light" />

        <com.saulmm.material.slidingtabs.views.WPTextView
            android:id="@+id/childtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/two_hint_child"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:fontVariation="light" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/childtitle"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:src="@drawable/guide_btn_sync_qq_normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:src="@drawable/guide_btn_sync_gg_normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/guide_btn_sync_yahoojp_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:src="@drawable/guide_btn_sync_139_normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:src="@drawable/guide_btn_sync_ex_normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/guide_btn_sync_more_normal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="8dip"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <com.saulmm.material.slidingtabs.views.WPTextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28dip"
                        android:gravity="center"
                        android:text="1/2"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:fontVariation="light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <com.saulmm.material.slidingtabs.views.WPTextView
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28dip"
                        android:drawableRight="@drawable/guide_ico_sync_skip"
                        android:gravity="right"
                        android:text="@string/in"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:fontVariation="light" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>